--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
   <title>Length Conversion Calculator</title>
   <script>
-    function convertLength() {
-      // Get input values
+    function convertLength(conversionType) {
+      // Get input value
       var millimeters = parseFloat(document.getElementById("millimeters").value);
-      var conversionType = document.getElementById("conversionType").value;
       
       // Perform conversion
       var result;
@@ -28,14 +27,12 @@
   <label for="millimeters">Millimeters:</label>
   <input type="number" id="millimeters" step="any" />
   <br>
-  <label for="conversionType">Conversion Type:</label>
-  <select id="conversionType">
-    <option value="centimeters">Centimeters</option>
-    <option value="meters">Meters</option>
-    <option value="kilometers">Kilometers</option>
-  </select>
+  <p>Conversion Type:</p>
+  <button onclick="convertLength('centimeters')">Convert to Centimeters</button>
+  <button onclick="convertLength('meters')">Convert to Meters</button>
+  <button onclick="convertLength('kilometers')">Convert to Kilometers</button>
   <br>
-  <button onclick="convertLength()">Convert</button>
   <p id="result"></p>
 </body>
 </html>
+
